# sable

./: .coverage  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: eT_class.F90
src/sable/: __init__.py  baseline.py  checker.py  cli.py  diagnostics.py  formatter.py  lexer.py  nodes.py  outputs.py  tokens.py
src/sable/rules/: __init__.py  formatting.py
tests/: test_check.py  test_cli.py  test_formatter.py  test_lexer.py
