[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sable-fortran"
version = "0.1.0"
description = "An uncompromising Fortran formatter, inspired by Black"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fortran", "formatter", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.5",
]

[project.scripts]
sable = "sable.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sable"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
